<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".activities.ProfileEdit">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="7dp"
        android:textColor="@color/dark_blue"
        android:layout_marginLeft="7dp"
        tools:ignore="RtlHardcoded" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:id="@+id/textNewProfileName">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:hint="@string/new_name"
            android:textColor="@color/dark_blue"
            android:inputType="textCapWords"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="7dp"
        android:textColor="@color/dark_blue"
        android:layout_marginLeft="7dp"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGender"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="25sp"
            android:id="@+id/genderMale" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="25sp"
            android:id="@+id/genderFemale" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="7dp"
        android:textColor="@color/dark_blue"
        android:layout_marginLeft="7dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:id="@+id/dob"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:textColor="@color/login_form_details"
        android:id="@+id/saveChanges"
        android:background="@drawable/button_design"
        android:layout_marginTop="20dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:visibility="invisible" />

</LinearLayout>
