<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    tools:context=".activities.UserProfile">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/blank_pic"
        android:scaleType="fitXY"
        android:layout_weight="1.6"
        android:id="@+id/profilePic"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileName"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_one"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/friendsCheck"
                android:onClick="onFriendsClick"
                android:text="@string/friends"
                android:layout_marginStart="10dp"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:background="@color/colorSilver"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/followingCheck"
                android:text="@string/following"
                android:layout_marginStart="10dp"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:background="@color/colorSilver"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/messageCheck"
                android:onClick="onMessageClick"
                android:text="@string/message"
                android:layout_marginLeft="10dp"
                android:textAllCaps="false"
                android:layout_marginRight="10dp"
                android:textColor="@color/dark_blue"
                android:background="@color/colorSilver"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/layout_three"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/gender"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/profileGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_set"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/friends"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/profileFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/birthday"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/profileDob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_set"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSendRequest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/send_request"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_design" />

</LinearLayout>
